ui/less/styles.less
/* ==========================================================================
CSS/LESS includes 
========================================================================== */
@import "../../bower_components/bootstrap/less/bootstrap.less";
@import "legacy.less";
@import "layout.less";

/* ==========================================================================
Globals & Mixins
========================================================================== */
.rounded-corners (@radius: 5px) {
    -webkit-border-radius: @radius;
    -moz-border-radius: @radius;
    -ms-border-radius: @radius;
    -o-border-radius: @radius;
    border-radius: @radius;
}

.box-shadow (@x: 0; @y: 0; @blur: 1px; @color: rgba(0,0,0,0.3)) {
    -moz-box-shadow: @arguments;
    -webkit-box-shadow: @arguments;
    box-shadow: @arguments;
}

/* ==========================================================================
Variables
========================================================================== */



/* ==========================================================================
Progressively enhance for larger screens 
========================================================================== */

@media screen and (min-width: 768px) { /* Adjust for large desktop */

}

@media screen and (min-width: 768px) and (max-width: 1024px) { /* Adjust for standard desktop */

}

@media screen and (min-width:768px) and (max-width: 992px) { /* portrait tablets */ 

}

@media only screen and (-webkit-min-device-pixel-ratio: 2) {
    /* Put high-resolution display styles here */
}

/* ==========================================================================
Print styles.
Should be inlined to avoid required HTTP connection: h5bp.com/r
========================================================================== */
@media print {
    * {
        background: transparent !important;
        color: #000 !important; /* Black prints faster: h5bp.com/s */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links for images, or javascript/internal links
     */

a[href^="javascript:"]:after,
a[href^="#"]:after {
    content: "";
}

pre,
blockquote {
    border: 1px solid #999;
    page-break-inside: avoid;
}

thead {
    display: table-header-group; /* h5bp.com/t */
}

tr,
img {
    page-break-inside: avoid;
}

img {
    max-width: 100% !important;
}

p,
h2,
h3 {
    orphans: 3;
    widows: 3;
}

h2,
h3 {
    page-break-after: avoid;
}
}





* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box; }



  /* New Code */



 /* ==========================================================================
HOME
========================================================================== */ 

/* :: VARIABLES :: */

@ltgrey: #dedede;
@padding: 20px;
@corner: 5px;
@hidden: none;
/* :: MIXINS :: */

.border-radius (@radius: 5px) {
  -webkit-border-radius: @radius;
  -moz-border-radius:    @radius;
  border-radius:         @radius;

  -moz-background-clip:    padding;
  -webkit-background-clip: padding-box;
  background-clip:         padding-box;
}

.button{
  border-radius: 5px;
  background: #92159e;
  color: white;
  display: block;
  margin: auto;
  margin-bottom: 1.5rem;
  text-align: center;
  font-size: 2.4rem;
  font-family: "franklin-gothic-urw-cond", sans-serif;
  text-transform: none;
  transition: background .3s ease; 
  
}
.button:hover, .button:visited {
  background: #bc1bcb;
  color: white;
  border: none; 
}


/* ==========================================================================
SIDEBAR
========================================================================== */ 

aside {
  font-size: 0.85em;
  a{
    display: block;
    clear:both;
  }
  p{
    text-align: center;
    line-height: 14px;
  }
}

 /* ==========================================================================
PAGE :: PRIZES
========================================================================== */ 
#prizes div:nth-child(2n) { clear: both; }



.single-prize {

  img {
    display: block;
  }
  h4{
    text-align: center;
    font-weight: 800;
    text-transform: capitalize;
  }
}


/* ==========================================================================
LETTERS
========================================================================== */ 


.card, .card-detail {
  border: solid 1px @ltgrey;
  border-radius: @corner;
  background: rgba(222, 222, 222, 0.1);
}

#letter, .letters {
  article {
    header {
      text-align: center;

    }
    .businessName {
      font-weight: bold;
      font-size: 1.2em;
      text-transform: capitalize;
    }

    .submitterName{
      text-transform: capitalize;
    }
    footer {
      text-align: center;
    }
  }
}

#pagination {
  overflow: hidden;
  li{
    a:visited{
      color: #fff;

    }

  }
}


//IE

.ie{
  iframe{
    height: 600px;
  }
}

